force-app/main/default/objects/Case_Service_Config__mdt/Case_Service_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for case service types by object.</description>
    <label>Case Service Config</label>
    <pluralLabel>Case Service Configs</pluralLabel>
</CustomObject>