force-app/main/default/objects/Case_Service_Config__mdt/fields/Default_Priority__c.field-meta.xml
<CustomField>
    <fullName>Default_Priority__c</fullName>
    <description>Default case priority.</description>
    <label>Default Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>