force-app/main/default/objects/Case_Service_Config__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether this service config is active.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>