force-app/main/default/objects/Case_Service_Config__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Object API name e.g. Loan__c, Account, Deposit__c.</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>