force-app/main/default/objects/Case_Service_Config__mdt/fields/Required_Fields__c.field-meta.xml
<CustomField>
    <fullName>Required_Fields__c</fullName>
    <description>JSON array of field labels to show on form.</description>
    <label>Required Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>