force-app/main/default/objects/Case_Service_Config__mdt/fields/Routing_Queue__c.field-meta.xml
<CustomField>
    <fullName>Routing_Queue__c</fullName>
    <description>Queue API name for case assignment.</description>
    <label>Routing Queue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>